manifests/deployment/dd-test-development/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dd-test-development-blue
  namespace: default
  labels:
    app: dd-test-development-blue
    deploy-id: dd-test-development
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dd-test-development-blue
  template:
    metadata:
      labels:
        app: dd-test-development-blue
        deploy-id: dd-test-development
    spec:
      containers:
        - name: dd-test-development-blue
          image: underpost/underpost-engine:v3.4.0
          imagePullPolicy: IfNotPresent
          command:
            - /bin/sh
            - -c
            - >
              underpost start --build --run dd-test development
          readinessProbe:
            {
              "httpGet": {
                "path": "/_internal/ready",
                "port": 4032
              },
              "initialDelaySeconds": 5,
              "periodSeconds": 5,
              "timeoutSeconds": 3,
              "failureThreshold": 3
            }
          livenessProbe:
            {
              "httpGet": {
                "path": "/_internal/health",
                "port": 4032
              },
              "initialDelaySeconds": 30,
              "periodSeconds": 15,
              "timeoutSeconds": 3,
              "failureThreshold": 3
            }
          startupProbe:
            {
              "httpGet": {
                "path": "/_internal/ready",
                "port": 4032
              },
              "initialDelaySeconds": 10,
              "periodSeconds": 10,
              "timeoutSeconds": 3,
              "failureThreshold": 180
            }



---
apiVersion: v1
kind: Service
metadata:
  name: dd-test-development-blue-service
  namespace: default
spec:
  selector:
    app: dd-test-development-blue
  ports:
    - name: 'tcp-4033'
      protocol: TCP
      port: 4033
      targetPort: 4033
    - name: 'udp-4033'
      protocol: UDP
      port: 4033
      targetPort: 4033

    - name: 'tcp-4034'
      protocol: TCP
      port: 4034
      targetPort: 4034
    - name: 'udp-4034'
      protocol: UDP
      port: 4034
      targetPort: 4034

    - name: 'tcp-4035'
      protocol: TCP
      port: 4035
      targetPort: 4035
    - name: 'udp-4035'
      protocol: UDP
      port: 4035
      targetPort: 4035

    - name: 'tcp-4036'
      protocol: TCP
      port: 4036
      targetPort: 4036
    - name: 'udp-4036'
      protocol: UDP
      port: 4036
      targetPort: 4036

    - name: 'tcp-4037'
      protocol: TCP
      port: 4037
      targetPort: 4037
    - name: 'udp-4037'
      protocol: UDP
      port: 4037
      targetPort: 4037

    - name: 'tcp-4038'
      protocol: TCP
      port: 4038
      targetPort: 4038
    - name: 'udp-4038'
      protocol: UDP
      port: 4038
      targetPort: 4038

    - name: 'tcp-4039'
      protocol: TCP
      port: 4039
      targetPort: 4039
    - name: 'udp-4039'
      protocol: UDP
      port: 4039
      targetPort: 4039

    - name: 'tcp-4040'
      protocol: TCP
      port: 4040
      targetPort: 4040
    - name: 'udp-4040'
      protocol: UDP
      port: 4040
      targetPort: 4040

    - name: 'tcp-4041'
      protocol: TCP
      port: 4041
      targetPort: 4041
    - name: 'udp-4041'
      protocol: UDP
      port: 4041
      targetPort: 4041
  type: LoadBalancer
