manifests/deployment/dd-test-development/traffic-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: dd-test-development-traffic-service
  namespace: default
  labels:
    underpost.net/traffic-service: "true"
    underpost.net/deploy-id: dd-test-development
spec:
  type: ClusterIP
  selector:
    app: dd-test-development-blue
  ports:
    - name: 'tcp-4036'
      protocol: TCP
      port: 4036
      targetPort: 4036
    - name: 'udp-4036'
      protocol: UDP
      port: 4036
      targetPort: 4036

    - name: 'tcp-4037'
      protocol: TCP
      port: 4037
      targetPort: 4037
    - name: 'udp-4037'
      protocol: UDP
      port: 4037
      targetPort: 4037

    - name: 'tcp-4038'
      protocol: TCP
      port: 4038
      targetPort: 4038
    - name: 'udp-4038'
      protocol: UDP
      port: 4038
      targetPort: 4038

    - name: 'tcp-4039'
      protocol: TCP
      port: 4039
      targetPort: 4039
    - name: 'udp-4039'
      protocol: UDP
      port: 4039
      targetPort: 4039

    - name: 'tcp-4040'
      protocol: TCP
      port: 4040
      targetPort: 4040
    - name: 'udp-4040'
      protocol: UDP
      port: 4040
      targetPort: 4040

    - name: 'tcp-4041'
      protocol: TCP
      port: 4041
      targetPort: 4041
    - name: 'udp-4041'
      protocol: UDP
      port: 4041
      targetPort: 4041

    - name: 'tcp-4042'
      protocol: TCP
      port: 4042
      targetPort: 4042
    - name: 'udp-4042'
      protocol: UDP
      port: 4042
      targetPort: 4042

    - name: 'tcp-4043'
      protocol: TCP
      port: 4043
      targetPort: 4043
    - name: 'udp-4043'
      protocol: UDP
      port: 4043
      targetPort: 4043

    - name: 'tcp-4044'
      protocol: TCP
      port: 4044
      targetPort: 4044
    - name: 'udp-4044'
      protocol: UDP
      port: 4044
      targetPort: 4044
