manifests/deployment/dd-test-development/proxy.yaml

---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: test.nexodev.org
  namespace: default
spec:
  virtualhost:
    fqdn: test.nexodev.org
  routes:
    - conditions:
        - prefix: /wp
      
      enableWebsockets: true
      services:
        - name: dd-test-development-traffic-service
          port: 4036
          weight: 100
    
    - conditions:
        - prefix: /
      
      enableWebsockets: true
      services:
        - name: dd-test-development-traffic-service
          port: 4037
          weight: 100
    
    - conditions:
        - prefix: /peer
      
      enableWebsockets: true
      services:
        - name: dd-test-development-traffic-service
          port: 4038
          weight: 100
    
    - conditions:
        - prefix: /r1
      
      enableWebsockets: true
      services:
        - name: dd-test-development-traffic-service
          port: 4039
          weight: 100
    
    - conditions:
        - prefix: /r1/peer
      
      enableWebsockets: true
      services:
        - name: dd-test-development-traffic-service
          port: 4040
          weight: 100
    
    - conditions:
        - prefix: /r2
      
      enableWebsockets: true
      services:
        - name: dd-test-development-traffic-service
          port: 4041
          weight: 100
    
    - conditions:
        - prefix: /r2/peer
      
      enableWebsockets: true
      services:
        - name: dd-test-development-traffic-service
          port: 4042
          weight: 100
    
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: stagging.nexodev.org
  namespace: default
spec:
  virtualhost:
    fqdn: stagging.nexodev.org
  routes:
    - conditions:
        - prefix: /
      
      enableWebsockets: true
      services:
        - name: dd-test-development-traffic-service
          port: 4043
          weight: 100
    
    - conditions:
        - prefix: /peer
      
      enableWebsockets: true
      services:
        - name: dd-test-development-traffic-service
          port: 4044
          weight: 100
